# QuakeLiveInterface

./: .dockerignore  .gitattributes  .gitignore  CONTRIBUTING.md  Dockerfile  Dockerfile.server  QUICKSTART.md  README.md  SECURITY.md  analyze_replays.py  docker-compose.multi.yml  docker-compose.yml  example.py  index.html  pyproject.toml  research.md  stress_test.sh  visualizer.py  web_server.py
.github/: FUNDING.yml  pull_request_template.md
.github/workflows/: unittests.yml
QuakeLiveInterface/: client.py  connection.py  constants.py  env.py  interface-plugin.py  metrics.py  minqlx.py  replay.py  rewards.py  state.py  utils.py
QuakeLiveInterface/quakeliveinterface/: interface-plugin.py
QuakeLiveInterface/tests/: test_client.py  test_connection.py  test_state.py
agents/: __init__.py  random_agent.py  rules_based_agent.py
docker/: entrypoint.sh  healthcheck.sh  mappool_training.txt  server.cfg  start.sh
minqlx-fork/: .gitignore  Makefile  README.md  commands.c  common.h  dllmain.c  hooks.c  hooks.c.patch  maps_parser.c  maps_parser.h  misc.c  patches.c  patterns.h  pyminqlx.h  python_dispatchers.c  python_embed.c  quake_common.h  simple_hook.c  simple_hook.h  trampoline.c  trampoline.h
minqlx-fork/python/: version.py
minqlx-plugin/: __init__.py  ql_agent_plugin.py
templates/: index.html
tests/: VISUAL_CHECKLIST.md  benchmark_latency.py  integration_physics.py  test_client.py  test_connection.py  test_env.py  test_metrics.py  test_replay.py  test_rewards.py  test_state.py
tools/: setup_wsl_server.sh  simulator.py  test_subscribe.py
(+11 files in other folders)
