[tool.poetry]
name = "quakeliveinterface"
version = "0.1.0"
description = ""
authors = ["cainky <kylecain.me@gmail.com>"]
readme = "README.md"
packages = [{include = "QuakeLiveInterface"}]

[tool.poetry.dependencies]
python = "^3.9"
redis = "^7.0.0"
numpy = "^2.0.2"
gymnasium = "^1.1.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-mock = "^3.15.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
